# test-cython

./: __init__.py  meson.build  pyproject.toml  test.pyx  test_py.py
